# eDAVE

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  Procfile  README.md  config.json  pyproject.toml  requirements.txt
app/: app.py  config.json  tests.py
app/assets/: custom-script.js  styles.css
app/pages/: 1D-browser.py  association_browser.py  association_explorer.py  cluster_explorer.py  data_explorer.py  differential_features_browser.py  differential_features_explorer.py  documentation.py  download.py  home.py  manual.py  methylation_expresion_browser.py  methylation_expression_browser.py  multi_dimensional_browser.py  multidimensional_browser.py  one_dimensional_browser.py  probe_gene_explorer.py  repository.py
app/src/: basics.py  decomposition.py  differential_features.py  plots.py  regression.py  statistics.py  utils.py
data-processing-pipeline/: config.json  config.py  run.py  test.py  tests.py
data-processing-pipeline/src/: collector.py  exceptions.py  records.py  sample_collection.py  utils.py
