[tool.poetry]
name = "mtl"
version = "0.1.0"
description = ""
authors = ["jan.binkowski96 <jan.binkowski96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
pyarrow = "^8.0.0"
plotly = "^5.9.0"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
dash = "^2.6.0"
tqdm = "^4.64.0"
statsmodels = "^0.13.2"
cookiecutter = "^2.1.1"
sklearn = "^0.0"
dash-bootstrap-components = "^1.2.0"
dash-labs = "^1.1.0"
lxml = "^4.9.1"
prefect = "^2.0.0"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.4.4"
black = "^22.6.0"
nb-black = "^1.0.7"
pylint = "^2.14.5"
bandit = "^1.7.4"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
